[gd_scene load_steps=18 format=3 uid="uid://t6jjkf7w2aip"]

[ext_resource type="PackedScene" uid="uid://bbkdkp0428yji" path="res://prefabs/player.tscn" id="1_38yu2"]
[ext_resource type="Script" path="res://scripts/world.gd" id="1_iroee"]
[ext_resource type="Script" uid="uid://boimiilxj3n2b" path="res://addons/cameraregion2d/CameraRegionController2D.gd" id="3_q1qbj"]
[ext_resource type="Script" path="res://scripts/level_manager.gd" id="4_q1qbj"]
[ext_resource type="Script" uid="uid://dqi2pls0xboqr" path="res://addons/rhythm_notifier/rhythm_notifier.gd" id="5_b7oqo"]
[ext_resource type="PackedScene" uid="uid://dktcdyv405i1p" path="res://prefabs/loop_bar.tscn" id="5_nswv7"]
[ext_resource type="Script" path="res://scripts/level.gd" id="7_6ovhn"]
[ext_resource type="PackedScene" uid="uid://bhgotk0stngoq" path="res://prefabs/rooms/room_2.tscn" id="7_ksotl"]
[ext_resource type="PackedScene" uid="uid://but84a2ah4oj8" path="res://prefabs/rooms/room_1.tscn" id="7_w5gp6"]
[ext_resource type="PackedScene" uid="uid://drysfw5lr2cq5" path="res://prefabs/rooms/room_3.tscn" id="8_3ok8l"]
[ext_resource type="AudioStream" uid="uid://d3uf2kkgotct3" path="res://assets/music/test/metro_2.ogg" id="11_6krbk"]
[ext_resource type="AudioStream" uid="uid://bxamnrwj8w5xu" path="res://assets/music/test/metro.ogg" id="15_m07vp"]
[ext_resource type="Script" uid="uid://deofdsnkjeipf" path="res://scripts/music/audio_track_manager.gd" id="15_w5gp6"]
[ext_resource type="AudioStream" uid="uid://be3bj08upc4oc" path="res://assets/music/test/intensity.ogg" id="16_3ok8l"]
[ext_resource type="AudioStream" uid="uid://dsn47jtmwqpfi" path="res://assets/music/test/mystery.ogg" id="16_ksotl"]
[ext_resource type="AudioStream" uid="uid://b1b042vblllv8" path="res://assets/music/test/TwoSisters_Level_Base.ogg" id="16_w5gp6"]

[sub_resource type="Resource" id="Resource_m07vp"]
script = ExtResource("7_6ovhn")
name = "Level 1"
room_prefabs = Array[PackedScene]([ExtResource("7_w5gp6"), ExtResource("7_ksotl"), ExtResource("8_3ok8l")])
metadata/_custom_type_script = "uid://drr3hic848gx0"

[node name="Atlinx" type="Node2D"]

[node name="World" type="Node2D" parent="."]
script = ExtResource("1_iroee")

[node name="Player" parent="World" instance=ExtResource("1_38yu2")]
position = Vector2(384, 2176)

[node name="CameraRegionController2D" type="Node2D" parent="World" node_paths=PackedStringArray("camera", "target_node")]
script = ExtResource("3_q1qbj")
camera = NodePath("../Camera2D")
target_node = NodePath("../Player")
metadata/_custom_type_script = "uid://boimiilxj3n2b"

[node name="Camera2D" type="Camera2D" parent="World"]
zoom = Vector2(0.05, 0.05)

[node name="LoopBar" parent="World" node_paths=PackedStringArray("rhythm_notifier") instance=ExtResource("5_nswv7")]
rhythm_notifier = NodePath("../../LevelManager/RhythmNotifier")

[node name="LevelManager" type="Node" parent="." node_paths=PackedStringArray("camera_region_controller", "loop_bar", "player", "world", "rhythm_notifier", "bg_track_manager")]
script = ExtResource("4_q1qbj")
level = SubResource("Resource_m07vp")
min_transition_duration = 2.0
camera_region_controller = NodePath("../World/CameraRegionController2D")
loop_bar = NodePath("../World/LoopBar")
player = NodePath("../World/Player")
world = NodePath("../World")
rhythm_notifier = NodePath("RhythmNotifier")
bg_track_manager = NodePath("../BGTrackManager")

[node name="RhythmNotifier" type="Node" parent="LevelManager" node_paths=PackedStringArray("audio_stream_player")]
script = ExtResource("5_b7oqo")
audio_stream_player = NodePath("../../BGTrackManager/BGTracksPlayer")
is_global = true
metadata/_custom_type_script = "uid://dqi2pls0xboqr"

[node name="BGTrackManager" type="Node" parent="."]
script = ExtResource("15_w5gp6")
tracks = Array[AudioStream]([ExtResource("15_m07vp"), ExtResource("11_6krbk"), ExtResource("16_w5gp6"), ExtResource("16_3ok8l"), ExtResource("16_ksotl")])
fade_duration = 1.0
metadata/_custom_type_script = "uid://deofdsnkjeipf"

[node name="BGTracksPlayer" type="AudioStreamPlayer" parent="BGTrackManager"]
autoplay = true
